mule-user-guide/v/3.6/microsoft-sharepoint-2013-connector.adoc
=  Microsoft SharePoint 2013连接器
:keywords: anypoint studio, connector, endpoint, microsoft, sharepoint, share point, intranet

Microsoft SharePoint是用于内容和文档管理，Intranet门户，协作，外联网，网站和企业搜索的Web应用程序平台。

Anypoint平台的Microsoft SharePoint连接器通过其REST API实现与SharePoint 2013的集成。

*Release Notes*： link:/release-notes/microsoft-sharepoint-2013-connector-release-notes[Microsoft SharePoint 2013连接器发行说明]

//缺少Samples和FAQ

== 概述

支持的操作：

*  *Lists and List Items API*：创建，删除，检索和更新列表和列表项。
*  *Files and Folders API*：
** 文件：添加，检索内容，检索元数据，删除，签出，撤消签出，签入，发布，取消发布，批准，拒绝，回收和复制文件。
** 文件夹：创建，删除和检索文件夹。

支持的Microsoft SharePoint版本：

*  Microsoft SharePoint 2013
*  Microsoft SharePoint Online

=== 认证

Microsoft SharePoint连接器支持基于哪个+的不同身份验证方案
您访问的Microsoft SharePoint：

* 内部部署支持Microsoft SharePoint身份验证：
**  NTLM
** 基于声明的身份验证
* 在线支持Microsoft SharePoint身份验证：
** 基于声明的身份验证
* 不支持的身份验证：Kerberos

==== 基于声明的身份验证

配置连接器以使用基于声明的身份验证需要来自安全令牌服务（STS）的以下信息用于身份验证：

*  *Sts Url*：接受用户名和密码验证用户并理解WS-Trust 1.3协议的STS端点。当STS是Microsoft的ADFS（Active Directory联合服务）时，此URL通常是`+https://youradfs.com/adfs/services/trust/13/usernamemixed.+`
*  *Sts App Identifier*：标识STS中Sharepoint网站的字符串。它也被称为依赖方标识符，客户标识符，范围或领域。如果STS是Microsoft的ADFS，则可以在AD FS下的AD FS管理控制台中的T *rust Relationships*> *Relying Party Trusts*>（Sharepoint站点依赖部件属性）_> *Identifiers*标签。 +
 +
 通过在Web浏览器中打开站点URL，登录到您想要访问的Sharepoint站点，即可获得Sts App标识符。如果为一个站点配置了多个身份验证提供程序，则会在下拉菜单中列出这些选项。选择所需的STS重定向到STS的登录页面。此时，Web浏览器的地址栏包含一个URL，其中包含以下查询参数：+
 +
  `wa=wsignin1.0&wtrealm=uri%3amule%3asp80` +
 +
参数_ *wa* _告诉STS登录正在启动。 _ *wtrealm* _包含Sts App标识符的URI编码值。在这个例子中，`uri%3amule%3asp80`是`uri:mule:sp80`。未编码的值是连接器配置的参数。

== 安装和配置

要安装连接器，请参阅 link:/mule-user-guide/v/3.6/installing-connectors[从Anypoint Exchange安装连接器]。


=== 配置您的第一个流程

配置：

. 在Anypoint Studio中，点击*File*> *New*> *Mule Project*。
. 指定一个*Project Name*并点击*Finish*。
. 点击*Global Elements*标签。
. 点击*Create*。
. 在*Search*文本框中，键入*sharepont*。
. 点击*Microsoft SharePoint*，然后点击*OK*。
. 选择全局类型来配置：
+
image:WindowsGlobalTypes.png[WindowsGlobalTypes]
. 传统连接：
.. 填写*Username*，*Password*和*Site URL*。
.. 对于认证：
*** 如果使用自签名SSL证书，并点击*Disable SSL certificate validation*复选框。
*** 要与声明验证连接，请填写STS URL（安全令牌服务）和范围（依赖方标识符）。 STS URL必须指向STS的端点，该端点接受用户名和密码作为认证凭证并理解WS-Trust 1.3标准。在ADFS中，端点通常是`+https://myadfs.com/adfs/services/trust/13/usernamemixed+`。此外，端点必须在ADFS中启用（默认情况下启用）。
*** 要连接NTLM身份验证，请填写*Domain*。
*** 要连接到SharePoint Online，请将NTLM和声明输入留空。只需指定一个*Username*，*Password*和*Site URL*。
. 点击*Test Connection*以确保连接正常工作：
+
image:SPGlobalElementProps.png[SPGlobalElementProps]

其他连接类型需要类似的信息。

*Note*：Pooling Profile，重新连接和Notes标签可以被忽略。这些由Studio提供并包含默认信息。

=== 创建Anypoint Studio流程

创建Anypoint Studio流程：

. 从Anypoint Studio中，点击*File*> *New*> *Mule Project*。
. 指定一个*Project Name*并点击*Finish*。
. 在搜索框中，键入*http*，然后将连接器部分的*HTTP Endpoint*拖到画布上。
. 在搜索框中，键入**sharepoint **，然后将HTTP连接器实例拖到HTTP端点连接器旁边。
. 在搜索框中，键入*json*并在Microsoft SharePoint连接器旁边拖动一个**Object to JSON **转换器。
+
image:SPMuleFlow.png[SPMuleFlow]
. 双击HTTP端点。确保*Host*设置为*localhost*，*Port*设置为**8081**。将*Path*设置为*query*。点击*OK*。
. 双击Microsoft SharePoint连接器并单击绿色加号。
. 更新以下配置值：
.. 从连接器配置列表中，单击先前创建的*Microsoft SharePoint*配置。
.. 从“操作”列表中，单击*List query*。 +
  *Note*：*List query*选项只有在成功连接到SharePoint实例后才会显示在“操作”列表中。
.. 从语言列表中，点击*DataSense Query Language*。
. 单击查询生成器：
.. 从类型列表中，点击*Documents*。
.. 从字段列表中，点击*ID*和*Title*。
.. 从订单方式，点击*Title*。
.. 从方向，点击*DESCENDING*
+
image:MSSPQueryBuilder.png[MSSPQueryBuilder]

== 运行流程

. 在包资源管理器中，右键单击sharepoint2013-demo并选择*Run As*> *Mule * *Application*。
. 检查控制台以查看应用程序何时启动。如果没有发生错误，您应该看到以下消息：
+
[source, code, linenums]
----
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Started app 'sharepoint2013-demo'                        +
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
----
+
. 打开Internet浏览器并访问`+http://localhost:8081/query+`
. 文档列表按降序标题排序，并以JSON格式返回（结果因SharePoint 2013实例而异）。
+
[source, code, linenums]
----
[{"__metadata":{"id":"Web/Lists(guid'2af685ae-5aec-4f60-b175-
54b21b6bd668')/Items(4)","uri":"https://ec2-54-200-49-206.us-west-
2.compute.amazonaws.com/_api/Web/Lists(guid'2af685ae-5aec-4f60-b175-
54b21b6bd668')/Items(4)","etag":"\"1\"","type":"SP.Data.Shared_x0020_Document
sItem"},"Id":4,"ID":4,"Title":"folder"}]
----

== 操作：列出和列出项目API

使用列表和列表项API可让您创建，检索，更新和删除SharePoint列表和列表项。

=== 创建，更新和删除列表项目

创建或更新项目时，请指定列表ID。指定ID后，DataSense将提取列表的元数据，而对象构建器会显示可以完成的每个字段：

[source, xml, linenums]
----
<sharepoint-2013:list-create config-ref="Sharepoint_2013" doc:name="Sharepoint 2013" baseTemplate="GENERIC_LIST" title="Title"> <sharepoint-2013:list ref="#[payload]"/> </sharepoint-2013:list-create>
----

或者在连接器本身中定义属性：

[source, xml, linenums]
----
<sharepoint-2013:list-create config-ref="Sharepoint_2013" 
doc:name="Sharepoint 2013" baseTemplate="GENERIC_LIST" title="Title"> 
  <sharepoint-2013:list contentTypesEnabled="true" description="Description"/> 
</sharepoint-2013:list-create>
----

为了检索和删除列表，只有列表ID是必需的：

[source, xml, linenums]
----
<sharepoint-2013:list-delete config-ref="Sharepoint_2013" 
doc:name="Sharepoint 2013" listId="8e306633-c600-40ab-80db-80f57968c0a1" />
----

=== 创建，更新和删除列表项目

创建或更新项目时，请指定一个列表ID。 DataSense使用列表ID来获取列表的元数据。对象生成器提供您需要完成的字段。

image:MSSPObjectBuilder.png[MSSPObjectBuilder]

=== 查询列表项目

使用查询生成器：

在左侧面板上，出现每个未隐藏的列表。在右侧面板上，出现所选列表的字段。如果该字段为*Lookup Field*，则字段类型为`SharepointListReference`或`SharepointListMultiValueReference`。

image:SPQueryBuilder.png[SPQueryBuilder]

如果选择这些字段中的任何一个以便由查询返回，则根据*Retrieve full objects for reference fields*复选框的值，可以使用两种类型的返回对象：

**  *not checked*：包含参考对象ID和参考对象列表ID的摘要对象：
+
[source, code, linenums]
----
{
    "Title": "A title",
    "LookupFieldId": {
        "id": "1",
        "lookupListId": "aaaa-1111-bbbb-2222"
    },
    "MultiValueLookupFieldId": {
        "ids": [
            1,
            2,
            3
        ],
        "lookupListId": "cccc-3333-dddd-4444"
    }
}
----
+
稍后可以在另一个连接器中使用此对象来为每个组件检索引用的对象以及a：
+
image:MSSPListItemQuery.png[MSSPListItemQuery]

**  *checked*。检索完整的对象图。如果有循环，则汇总参考对象显示：
+
[source, code, linenums]
----
{
    "Title": "A title",
    "LookupFieldId": {
        "Title": "Another title",
        "Id": "1",
        "Property1": "A value"
    },
    "MultiValueLookupFieldId": [
        {
            "Title": "Another title",
            "Id": "1",
            "Property1": "A value"
        },
        {
            "Title": "Another title",
            "Id": "2",
            "Property1": "A value"
        }
    ]
}
----
+
示例*Query Text*：
+
image:SPExampleQText.png[SPExampleQText]

选中此选项可能会导致包含许多参考字段的大型项目列表需要很长时间才能检索。

== 操作：文件和文件夹API

使用文件和文件夹API，您可以创建，检索，更新和删除文件和文件夹，还可以检入，检出，发布，批准，拒绝，复制和回收文件列表中的文件。

使用文件夹操作时，服务器的相对URL指的是文件夹的位置或位置。 URL的格式可以是_ / site / docList / innerFolder_或_docList / innerFolder_格式。在第二种情况下，使用连接器的配置站点URL参数中指定的站点。

在使用文件操作时，文件服务器相对URL指文件夹服务器相对URL加上文件名：_ / site / docList / innerFolder / filename_或_docList / innerFolder / filename_。

=== 创建和删除文件夹

您可以通过指定文件夹所在的服务器相对URL或您计划创建文件夹的位置来创建或删除文件夹。

结果流看起来：

[source, xml, linenums]
----
<sharepoint-2013:folder-create config-ref="Sharepoint_2013" url="/path/to/folder" doc:name="Sharepoint 2013"/>

<sharepoint-2013:folder-delete config-ref="Sharepoint_2013" url="/path/to/folder" doc:name="Sharepoint 2013"/>
----

=== 添加文件

可以通过选择物理文件或将输入流传递到连接器来上传文件，并将其上载到指定的服务器相关URL。例如，您可以将其与文件连接器一起用于将文件上传到列表。

使用输入流：

[source, xml, linenums]
----
<sharepoint-2013:file-add config-ref="Sharepoint_2013"
fileServerRelativeUrl="/path/to/folder/filename"
fileContentStream-ref="#[payload]" overwrite="true"
doc:name="Sharepoint 2013"/>
----

=== 获取文件内容

文件内容以字节数组的形式返回。例如，您可以将其用作文件连接器的输入以从列表中下载文件：

[source, xml, linenums]
----
<sharepoint-2013:file-get-content config-ref="Sharepoint_2013"
doc:name="Sharepoint 2013"
fileServerRelativeUrl="/path/to/folder/filename"/>
----

=== 查询文件和文件夹

此操作从指定的文件夹开始返回所有符合指定条件的文件和文件夹。

使用查询生成器：

* 在左侧面板上，出现SharePoint实例的文档列表。所选实例用作查询文件和文件夹的开始路径的一部分。
* 在右侧面板上，为每个文档列表显示相同的字段。
* 另外，您可以在_Folder Path_输入中指定一个或多个内部文件夹作为开始路径。
* 选择递归复选框时，会在起始路径的每个文件夹中递归搜索文件和文件夹。

设置查询生成器选项：

image:SharePointFolderPath.png[SharePointFolderPath]

例：

[source, code, linenums]
----
sharepoint-2013:file-query config-ref="Sharepoint_2013" query="dsql:SELECT Author,ModifiedBy,Name,ServerRelativeUrl FROM #[header:inbound:documentListName]" recursive="true" doc:name="Sharepoint 2013"/>

<sharepoint-2013:folder-query config-ref="Sharepoint_2013" recursive="true" query="dsql:SELECT ItemCount,Name,ServerRelativeUrl FROM #[header:inbound:documentListName] WHERE ItemCount &gt; 0" doc:name="Sharepoint 2013"/>
----

=== 其他文件操作

批准，签入，签出，拒绝，发布，撤消签出和取消发布，都与使用非常相似。指定文件URL，并在某些情况下将其他评论作为参数传递。

[source, xml, linenums]
----
<sharepoint-2013:file-publish config-ref="Sharepoint_2013"
doc:name="Sharepoint 2013" fileServerRelativeUrl="" comment=""/>
----

=== 设置文件元数据

您可以使用*Update List Item*操作获取并设置上传到文档库的文件的元数据。

要设置列表中文件的属性，您必须知道*List Item Id*。这可以使用延迟的*ListItemAllFields*属性进行检索。

以下流程说明了** File Add**如何直接链接到*Update List Item*操作以将文件上载到列表并在以下位置立即设置元数据：

[source, xml, linenums]
----
<flow name="sharepoint_demo_fileAddWithMetadata"
   doc:name="sharepoint_demo_fileAddWithMetadata">
   <http:inbound-endpoint exchange-pattern="request-response" host="localhost"
     port="8081" path="upload" doc:name="HTTP"/>
   <sharepoint:file-add config-ref="Sharepoint"
     fileServerRelativeUrl="/Shared Documents/myfile.txt"
     overwrite="true"
     doc:name="Add file"/>
   <sharepoint:resolve-object config-ref="Sharepoint"
     doc:name="Get ListItemId of File"
     url="#[payload.listItemAllFields.__deferred.uri]"/>
   <sharepoint:list-item-update config-ref="Sharepoint" itemId="#[payload.Id]"
     listId="ccbfaf65-b53e-48ac-be19-adf45192ecc3" doc:name="Set file properties">
       <sharepoint:updated-properties>
           <sharepoint:updated-property key="Title">Test title</sharepoint:updated-property>
       </sharepoint:updated-properties>
   </sharepoint:list-item-update>
   <set-payload value="OK" doc:name="Set Payload"/>
</flow>
----

== 解决延期属性

出于性能原因，许多SharePoint操作会返回实体的基本数据集以及一个或多个可用于检索其他详细信息或相关对象的延迟属性引用。

您可以使用通用的*Resolve object*或*Resolve collection*操作来解决设置为单个`Map<string,object>`或`List<Map<string,object>>`的延迟属性，并访问流中的此信息。

例如，该技术可以获取SharePoint File对象的全部字段：

[source, xml, linenums]
----
<sharepoint:resolve-object config-ref="SharePoint"
  url="#[payload.listItemAllFields.__deferred.url]"
  doc:name="Microsoft SharePoint" >
</sharepoint:resolve-object>
----

使用Mule Debugger或Logger组件记录有效负载，可以使用`_deferred` URL属性标识属性。

== 将文件附加到列表项

要将文件附加到列表项目，请使用ResolveObject操作，如下例所示：

[source, xml, linenums]
----
<flow name="sp-testFlow2">
  <http:listener config-ref="HTTP_Listener_Configuration" path="/at" doc:name="HTTP"/>
  <set-variable variableName="FileNameToAttach" value="CHANGELOG.md" doc:name="Set FileNameToAttach"/>

  <sharepoint:list-item-query config-ref="Microsoft_SharePoint__NTLM_Connection" query="dsql:SELECT ID,Title FROM 82b2a455-3faf-4162-8276-63a1093fcc7e WHERE Title = 'test-list-item-1'" doc:name="Read List Item"/>
  <set-variable variableName="ListItemUrl" value="#[payload.next() .__metadata.uri]" doc:name="SetListItemUri from list item query result"/>
  <set-payload value="#[groovy:new FileInputStream('C:\\temp\\' + flowVars.FileNameToAttach)]" doc:name="Set file to attach as inputstream in payload"/>

  <sharepoint:resolve-object config-ref="Microsoft_SharePoint__NTLM_Connection" url="#[flowVars.ListItemUrl]/AttachmentFiles/add(FileName='#[flowVars.FileNameToAttach]')" resolveRequestType="Create" doc:name="create attachment"/>
  <json:object-to-json-transformer doc:name="Object to JSON"/>
</flow>
----

流程显示如何：

. 从SharePoint读取列表项URI。如果您已经拥有该列表项目，因为它是在同一个流程中创建的，则可以使用该项目。
. 将文件读入输入流。这里是从c：\ temp（找到流中的路径来替换它）。
. 用该文件创建列表项目附件。

== 针对REST API执行直接调用

SharePoint REST API允许通过*Resolve object*和*Resolve collection*动作访问大量命令。这些操作提供了对指定URL的认证调用，并分别解析为Map和`List<Map>`。

*Resolve object*操作接受所有HTTP动词（GET，POST，PUT / MERGE，DELETE），并允许将请求中的正文发送给API。主体的默认值是Mule消息的有效载荷。

正文可以用于接受JSON的API端点：

*  `Map<String, Object>`被转换为JSON字符串。
包含JSON的*  `String`。该字符串按原样发送。

对于接受文件的API端点：

*  `InputStream`与文件。该流在使用后关闭。
*  `byte[]`与文件。该字节数组按原样发送。

== 使用具有多个值的选择列类型

您可以配置选择列类型以允许多个值。 Studio中用于接受多个值的列的元数据如下所示：

image:SharePointChoiceMultiSelect.png[SharePointChoiceMultiSelect]

假设SharePoint中的目标列表具有Title属性和一个名为ChoiceMultiSelect的多选列，它接受值`"one"`，`"two"`或`"three"`，则以下Groovy脚本会构造一个有效内容选择`"one", "three"`：

[source]
----
[Title: "foo", ChoiceMultiSelect: [results: ["one", "three"]]]
----

可以为多选列结果属性构造`List<string>`的任何语言都可以用于类似的效果。

这段伪代码演示了如何将Choice＃1和Choice＃2设置为ChoiceMultiSelect列的值：

[source, code, linenums]
----
values = new List<String>
values.add("Choice #1")
values.add("Choice #2")
multiValuesMap = new Map<String, Object>
multiValuesMap["results"] = values
List-item["ChoiceMultiSelect"] = multiValuesMap
----

== 异常处理

连接时发生=== 异常

如果连接器因任何原因无法与SharePoint实例连接，则会抛出ConnectionException类型的异常。

异常消息有助于调试异常的原因。

操作中的=== 异常

如果执行某个操作时发生错误，那么将引发一个SharepointException，并显示有关该错误的消息。

== 常见问题

=== 此连接器支持哪些版本的SharePoint？

SharePoint连接器支持SharePoint 2013本地和SharePoint联机版本。

=== 连接器支持哪些认证方案？

针对本地SharePoint实例进行身份验证的选项包括声明身份验证（ADFS）和NTLM。对于SharePoint Online，支持使用标准SharePoint联机用户凭据进行身份验证。

=== 连接器可以访问SharePoint对象模型的哪些部分？

提供了对文件和文件夹，列表，ListItems和附件的特定支持。此外，可以通过ResolveObject和ResolveCollection操作以JSON形式访问SharePoint API的所有其他实体。

=== 此连接器是否支持DataSense和DataMapper？

是的，所有受支持的实体和实体属性都由连接器向Studio公开，以便与DataMapper一起使用。

=== 我可以使用连接器执行哪些操作？

对于列表和ListItems API，支持的操作包括创建，检索，更新和删除。对于文件和文件夹，操作包括添加，检索内容，检索元数据，删除，签出，撤消签出，签入，发布，取消发布，批准，拒绝，回收和复制。

=== 是否有任何示例显示如何使用连接器？

是的，Anypoint Studio的示例项目可在此免费获取：（链接到sharepoint-connector-samples.zip）

=== 我可以在此连接器上使用哪些Mule版本？

任何运行在任何操作系统和位置上的企业版Anypoint平台都支持此连接器，包括CloudHub集成PaaS。

== 另请参阅

*  link:/mule-user-guide/v/3.6/mule-expression-language-mel[骡子表达语言（MEL）]
*  link:/mule-user-guide/v/3.6/endpoint-configuration-reference[配置端点]
*  link:/mule-user-guide/v/3.6/transformers[工作室变形金刚]
*   link:/mule-user-guide/v/3.6/flow-reference-component-reference[流量参考]
